# feed-curator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: db.py  main.py  mcp_server.py  models.py
app/adapters/: __init__.py  arxiv.py  base.py  rss.py  wechat.py
app/ai/: __init__.py  client.py  scorer.py
app/jobs/: fetcher.py  runner.py
app/services/: source_service.py  wewe_client.py
app/utils/: html_clean.py
app/web/: pages.py
app/web/templates/: dashboard.html  items.html  jobs.html  layout.html  settings.html  sources.html
docs/: deployment.md  startup.md
